Changelog
*********

1.12 - Unreleased
=================

* Fix encoding problem in python 3.
  [cedricmessiant]

* Added overwrite option - possibility to disable overwrite output file after
  re-execute buildout.
  [mstaniszczak]


1.11 - 2014-02-07
=================

* Python 3 support for Genshi and doctests.
  [mitchellrj]

* Delete script before writing to it, this way we avoid chmod permission errors
  when the current user is not the script owner.
  [alecghica]


1.10 - 2012-02-26
=================

* Add Python 3 support using 2to3 flag in setup.
  [mitchellrj]


1.9 - 2011-06-19
================

* Add support for URL input. Use ``url =`` (instead of ``input =``) to specify URL.
  [aclark]


1.8 - 2010-06-08
================

* WARNING! Backward incompatible change for Genshi templates.
  It wasn't possible to access parts with a dash in the name, so now you have
  to use ${parts.partname} or ${parts['part-name']}. In addition it is now
  possible to access the current part with ``options``.
  [fschulze]

* Import genshi modules very late to prevent issues with zc.buildout.
  [fschulze]


1.7 - 2010-05-21
================

* Added support for genshi text templates. Use them with this as the
  recipe:
  `recipe = collective.recipe.template[genshi]:genshi`
  Use a dot between the section name and the option name instead of a colon.
  [fschulze]


1.6 - 2010-02-24
================

* Output file mode is now assumed to be octal, like chmod.
  [elro]

* Inline template can now be specified with the inline option.
  [elro]


1.5 - 2010-02-23
================

* Add support for explicitly setting the output file mode.
  [witsch]

* Add support for inline templates.
  [witsch]


1.4 - 2009-07-29
================

* Fixed the way variables in templates are substituted to allow buildout to
  determine dependencies on other parts and prepare those correctly. [tlotze]


1.3 - 2009-04-28
================

* Add support for output path creation. You can do::
