@@ -11,6 +11,8 @@ Changelog
   re-execute buildout.
   [mstaniszczak]
 
+* Overwrite only when are differences between output and the already generated file.
+  [vitalikM91]
 
 1.11 - 2014-02-07
 =================
